--- a/public/assets/styles/index.css
+++ b/public/assets/styles/index.css
@@ -145,3 +145,15 @@ input {
 	text-decoration: none;
 	color: rgba(0,0,0,1);
 }
+
+.error {
+	margin: 1em;
+	padding: 0.1em;
+	border: 0;
+	text-align: center;
+}
+
+.errors {
+	background-color: rgba(255,0,0,0.3);
+	
+}
