--- a/public/assets/styles/index.css
+++ b/public/assets/styles/index.css
@@ -157,3 +157,9 @@ input {
 	background-color: rgba(255,0,0,0.3);
 	
 }
+
+.inline-form {
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+}
