Showing the date in the header

--- a/app/views/layouts/task.handlebars
+++ b/app/views/layouts/task.handlebars
@@ -19,7 +19,9 @@
 						</div>
 					</button>
 				</div>
-				<div id="today-date"></div>
+				<div id="today-date">
+					{{ date }}
+				</div>
 			</header>
 		
 			<main>
